Fix image upload & word wrap

--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -1,2 +1,4 @@
 html
     background-image: url('../images/body-bg.gif')
+.description
+    word-wrap: break-word
